plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.sentry.jvm.gradle' version '6.1.0'
    id 'org.springdoc.openapi-gradle-plugin' version '1.9.0'
}

group = 'bconnect.to'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.security:spring-security-messaging'

    // db
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.springframework.boot:spring-boot-h2console'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'
    // implementation 'org.flywaydb:flyway-database-postgresql'

    implementation platform('software.amazon.awssdk:bom:2.46.11')
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:cloudfront'
    implementation 'software.amazon.awssdk:sns'

    // jwt
    implementation('io.jsonwebtoken:jjwt-api:0.13.0')
    runtimeOnly ('io.jsonwebtoken:jjwt-impl:0.13.0')
    runtimeOnly('io.jsonwebtoken:jjwt-orgjson:0.13.0')

    // sms
    implementation 'com.solapi:sdk:1.1.0'

    // monitor
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-core'
    implementation 'io.sentry:sentry-spring-boot-4:8.34.1'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.2'

    // dev
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // docs
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty 'user.timezone', 'Asia/Seoul'
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
}


tasks.named('bootRun') {
    systemProperty 'user.timezone', 'Asia/Seoul'
}

jar{
    enabled = false
}

sentry {
    includeSourceContext = System.getenv("SENTRY_AUTH_TOKEN") != null
    org = "morton-2l"
    projectName = "api"
    authToken = System.getenv("SENTRY_AUTH_TOKEN")
}

openApi {
    apiDocsUrl.set("http://localhost:8080/v3/api-docs.yaml")
    outputFileName.set("openapi.yaml")
}